<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainAppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/bottom_navigation"
    android:layout_alignParentTop="false"
    android:layout_alignParentEnd="false"
    android:layout_alignParentBottom="false"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="false"
    android:adjustViewBounds="true"
    android:contentDescription="@string/app_name"
    android:cropToPadding="false"
    android:foregroundGravity="bottom"
    android:scaleType="fitXY"
    app:srcCompat="@drawable/bg_app" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        app:swipeRefreshLayoutProgressSpinnerBackgroundColor="@color/md_theme_primary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_img"
                    style="@style/MainAppTheme.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    app:cardCornerRadius="16dp">

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/Image_description"
                        android:scaleType="centerInside"
                        android:src="@drawable/wf_img" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view"
                    style="@style/MainAppTheme.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:text="@string/text1" />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:dividerColor="@color/md_theme_outlineVariant"
                            app:dividerInsetEnd="8dp"
                            app:dividerInsetStart="8dp"
                            app:dividerThickness="1dp" />

                        <TextView
                            android:id="@+id/watch_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:lineSpacingMultiplier="1.5"
                            android:text="@string/status_placeholder"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/open_app_button"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:elevation="6dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/CTA"
                    android:textSize="18sp"
                    app:icon="@drawable/watch_on"
                    app:iconPadding="8dp"
                    app:iconSize="24dp" />

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/MainAppTheme.MyBottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:elevation="8dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_alignParentBottom="true"
        app:itemIconSize="32dp"
        app:menu="@menu/bottom_app_bar_menu" />

</RelativeLayout>